# Snake-2

./: .gitignore  .gitmodules
Example Clients/C++/: CMakeLists.txt  client.h  main.cpp
Example Clients/Python/: main.py  snakeclient.py
Example Clients/Rust/: Cargo.toml
Example Clients/Rust/src/: main.rs  snake_client.rs
Server/: CMakeLists.txt
Server/headers/: DummyPlayer.h  Game.h  GameCreator.h  Player.h  Snake.h  utils.h
Server/headers/network/: snake_network.h
Server/headers/render/: GameDisplay.h  ImGuiRenderer.h
Server/libs/glad/: glad.c
Server/libs/imgui/: imgui.cpp  imgui_internal.h  imgui_widgets.cpp
Server/libs/imgui/backends/: imgui_impl_glfw.cpp
Server/libs/include/glad/: glad.h
Server/res/layouts/: smallfour.json  smalltwo.json
Server/src/: DummyPlayer.cpp  Game.cpp  GameCreator.cpp  Snake.cpp  main.cpp
Server/src/network/: snake_network.cpp
Server/src/render/: GameDisplay.cpp  ImGuiRenderer.cpp
